--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  flex-direction: row;
+  justify-content:space-between;
 }
 
 .logo {
@@ -14,6 +17,9 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 12px;
+  display: flex;
+  gap: 12px;
 }
 
 a {
